# projectDRF

./: .env  .sample.env  pyproject.toml
projectDRF/config/: celery.py  settings.py  urls.py
projectDRF/users/: urls.py
projectDRF/users/migrations/: 0001_initial.py
projectDRF/vehicle/: models.py  pagination.py  serializer.py  service.py  tasks.py  urls.py  validators.py  views.py
projectDRF/vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car_alter_milage_moto_alter_milage_year.py  0005_moto_owner.py  0006_alter_moto_owner.py  0007_alter_moto_owner.py  0008_car_amount.py
